2018-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make `cd doc; make pdf' work again

	This requires Texinfo the version >=6.3, and either (or both) of LuaTeX
	>=0.95 (i.e., TeXLive >=2016) or XeTeX >=0.9998 (i.e., TeXLive >=2012).

	* Makefile.in (clean): Use doc/Makefile's clean.

	* aclocal.m4 (AC_CHECK_TEXINFO): New function.

	* configure.in (MAKEINFO, TEXI2PDF): Check version.
	(TEXI2DVI, PTEX, PBIBTEX, DVIPDFMX, TEXI2PDF): Remove.

	* doc/Makefile.in (TEXI2DVI, PTEX, PBIBTEX, DVIPDFMX, TEXI2PDF): Remove.
	(PDFTEX): New internal variable.
	(dvi, dvi-en, dvi-ja, emacs-w3m.dvi, emacs-w3m-ja.dvi, .texi.dvi):
	Remove targets.
	(.texi.pdf): Use texi2pdf instead of dvipdfmx.
	(clean): Renew.

	* doc/emacs-w3m-ja.texi (texinfo-ja.tex): Use it instead of texinfo.tex.
	(@documentencoding): New.
	(@usedvipdfmx): Remove.

	* doc/texinfo-ja.tex: New file.
	* doc/texinfo.tex, doc/txi-en.tex, doc/txi-ja.tex: Renew.

2017-12-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	Update selection buffer properly after deletion or renaming.
	Suggested by Boruch Baum ([emacs-w3m:12847]).

	* w3m-session.el (w3m-session-save): Update selection buffer.
	(w3m-session-select-rename, w3m-session-select-delete):
	Make the selected session highlighted after renaming or deletion.
	(w3m-session-select): Allow specifying the session number;
	close selection window when no session remains after deletion.
	(w3m-session-save, w3m-session-rename): Emulate INITIAL-INPUT.

2017-12-12  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-lynx-like-map): Remap "s" to `w3m-search', "S" to
	`w3m-search-new-session'. [emacs-w3m:12838]
	(w3m-ctl-c-map): Remap "C-c M-h" to `w3m-history' [emacs-w3m:12842]

2017-12-08  Boruch Baum  <boruch_baum@gmx.com>

	[emacs-w3m:12840]
	* w3m.el (w3m-edit-url, w3m-edit-current-url, w3m-edit-this-url):
	Enable editing non-local files. In such cases, the user is prompted to
	save the emacs-w3m buffer locally, prior to beginning the editing
	session. Edit docstring.